<resources>
    <string name="app_name">爱跑</string>
    <!--MainActivity底边栏-->
    <string name="tab_community">社团</string>
    <string name="tab_friends">好友</string>
    <string name="tab_home">我的</string>
    <string name="tab_moment">动态</string>
    <string name="tab_run">跑步</string>
    
    <!--登录-->
    <string name="user_name">用户名</string>
    <string name="type_user_name">请输入用户名</string>
    <string name="password">密码</string>
    <string name="type_password_register">请输入6~20位的密码</string>
    <string name="type_repeat_password">请再次输入密码</string>
    <string name="login">登录</string>
    <string name="new_user_register">新用户注册</string>
    <string name="register">注册</string>
    <string name="error_pwd_length">密码长度应为6~20位</string>
    <string name="error_pwd_null">密码不能为空</string>
    <string name="error_re_pwd">两次输入的密码不同</string>
    <string name="error_user_name">用户名不能为空</string>

    <!--home-->
    <string name="best_run">最佳成绩</string>
    <string name="history">历史纪录</string>
    <string name="config">设置</string>
    <string name="km">km</string>
    <string name="total_distance">累计里程</string>
    <string name="total_duration">累计小时</string>
    <string name="total_times">累计次数</string>
    <string name="no_age">未设置年龄</string>
    <string name="no_sex">未设置性别</string>
    <string name="no_signature">没有个性签名</string>
    <string name="friend_ranking">好友排行榜</string>

    <!--best run-->
    <string name="farthest_run">最长距离：公里</string>
    <string name="longest_run">最长时间：</string>
    <string name="fastest_avg_speed">最快均速：公里每小时</string>
    <string name="fastest_pace">最快配速：分钟每公里</string>
    <string name="five_km_pb">5公里最快时间：</string>
    <string name="ten_km_pb">10公里最快时间：</string>
    <string name="half_marathon_pb">半程马拉松最快时间：</string>
    <string name="full_marathon_pb">全程马拉松最快时间：</string>

    <!--total run-->
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="total">总</string>
    <string name="sports_statistics">运动统计</string>
    <string name="cal">大卡</string>
    <string name="per_km">/公里</string>
    <string name="km_per_hour">公里/时</string>
    <string name="this_week">本周</string>
    <string name="my_run_life">我的运动生涯</string>
    <string name="distance">路程</string>

    <!--friends ranking-->
    <string name="day">日</string>

    <!--friends-->
    <string name="add_friend">添加好友</string>
    <string name="friend_request">好友请求</string>
    <string name="search_friend">搜索用户名</string>
    <string name="accept">接受</string>
    <string name="already_add">已添加</string>

    <!--run record-->
    <string name="duration">时长</string>
    <string name="avg_pace">平均配速</string>
    <string name="calories">卡路里</string>
    <string name="avg_speed">平均速度</string>
    <string name="track">轨迹</string>
    <string name="detail">详情</string>
    <string name="run_record">运动记录</string>
    <string name="avg_pace_m_per_km">平均配速(分钟/公里)</string>
    <string name="calories_cal">卡路里(大卡)</string>
    <string name="avg_speed_km_per_h">平均速度(公里/时)</string>

    <!--my info-->
    <string name="sex_And_Age">%1$s %2$d岁</string>
    <string name="id">ID:\  </string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="bmi">BMI</string>
    <string name="edit_info">编辑资料</string>
    <string name="sex">性别</string>
    <string name="location">所在地</string>
    <string name="profile">头像</string>
    <string name="user_id">用户ID</string>
    <string name="birthday">生日</string>
    <string name="modify_pwd">修改登录密码</string>
    <string name="select">选择</string>
    <string name="female">女</string>
    <string name="male">男</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="no_height">未设置身高</string>
    <string name="no_weight">未设置体重</string>
    <string name="no_data">--</string>
    <string name="complete">完成</string>
    <string name="signature">个性签名</string>
    <string name="fill_signature">编辑个性签名</string>
    
    <!--user info-->
    <string name="rank">等级</string>
    <string name="hour">小时</string>
    <string name="view_his_moment">查看他的动态</string>
    <string name="view_his_crew">查看他的跑团</string>
    <string name="personal_best_run">个人最佳成绩</string>
    <string name="detail_info">详细资料</string>
    <string name="delete_friend">删除好友</string>

    <!--moment-->
    <string name="reply">回复</string>
    <string name="add_moment">添加动态</string>
    <string name="send">发送</string>
    <string name="comment">评论</string>
    <string name="write_moment">发表动态</string>
    <string name="publish">发表</string>
    <string name="user_moment">用户动态</string>

    <!--run-->
    <string name="start">开始</string>
    <string name="hint_open_gps">记录跑步数据需要使用GPS定位功能\n请设置【准确度高】的定位模式</string>
    <string name="goto_set">去设置</string>
    <string name="pls_open_gps">请开启GPS</string>
    <string name="distance_km">距离(公里)</string>
    <string name="pls_pause_run">请先点击暂停按钮，并结束运动</string>
    <string name="pls_stop_run">请先结束运动</string>
    <string name="wind_info">%1$s风&#160;&#160;&#160;&#160;%2$s级</string>
    <string name="end">结&#160;束</string>

    <!--setting-->
    <string name="log_out">退出登录</string>

    <!--离线地图-->
    <string name="offline_map">离线地图</string>
    <string name="city_list">城市列表</string>
    <string name="download_manage">下载管理</string>
    <string name="map_size">%1$.1fMB</string>
    <string name="download">下载</string>
    <string name="downloaded">已下载</string>
    <string name="download_fail">下载失败</string>
    <string name="waiting_for_download">等待下载</string>
    <string name="unzipping">正在解压</string>
    <string name="delete_map_msg">确认要删除城市“%1$s”的离线地图包吗</string>
    <string name="delete_success">删除成功</string>
</resources>
