<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.qiyao.bysj.runningisthebest.module.home.viewmodel.TotalRunViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/base_list_item_vertical_margin"
            android:paddingEnd="@dimen/base_list_item_horizontal_margin"
            android:paddingStart="@dimen/base_list_item_horizontal_margin"
            android:paddingTop="@dimen/base_list_item_vertical_margin">

            <TextView
                android:text="2017年3月"
                style="@style/DarkPrimaryMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <include layout="@layout/view_divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base_list_item_vertical_margin"
            android:paddingEnd="@dimen/base_list_item_horizontal_margin"
            android:paddingStart="@dimen/base_list_item_horizontal_margin"
            android:paddingTop="@dimen/base_list_item_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_large" />

            <TextView
                style="@style/TotalNumberTextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="00:00:28" />
        </LinearLayout>

        <include layout="@layout/view_divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base_list_item_vertical_margin"
            android:paddingEnd="@dimen/base_list_item_horizontal_margin"
            android:paddingStart="@dimen/base_list_item_horizontal_margin"
            android:paddingTop="@dimen/base_list_item_vertical_margin">

            <TextView
                style="@style/DarkPrimaryMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calories" />

            <TextView
                style="@style/TotalNumberTextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="00:00:28" />

            <TextView
                android:layout_marginStart="@dimen/base_list_item_horizontal_spacing"
                style="@style/DarkPrimaryMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cal"/>
        </LinearLayout>

        <include layout="@layout/view_divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base_list_item_vertical_margin"
            android:paddingEnd="@dimen/base_list_item_horizontal_margin"
            android:paddingStart="@dimen/base_list_item_horizontal_margin"
            android:paddingTop="@dimen/base_list_item_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_pace"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_large" />

            <TextView
                style="@style/TotalNumberTextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="00:00:28" />

            <TextView
                android:layout_marginStart="@dimen/base_list_item_horizontal_spacing"
                style="@style/DarkPrimaryMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/per_km"/>
        </LinearLayout>

        <include layout="@layout/view_divider_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/base_list_item_vertical_margin"
            android:paddingEnd="@dimen/base_list_item_horizontal_margin"
            android:paddingStart="@dimen/base_list_item_horizontal_margin"
            android:paddingTop="@dimen/base_list_item_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_speed"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_size_large" />

            <TextView
                style="@style/TotalNumberTextLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="00:00:28" />

            <TextView
                android:layout_marginStart="@dimen/base_list_item_horizontal_spacing"
                style="@style/DarkPrimaryMediumText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_per_hour"/>
        </LinearLayout>
    </LinearLayout>
</layout>