<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.qiyao.bysj.runningisthebest.module.login.viewmodel.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="40dp"
        android:paddingStart="40dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginBottom="30dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="@{viewModel.isUserNameErrorEnabled}"
            app:error="@{viewModel.userNameError}"
            android:hint="@string/type_user_name">
            <EditText
                android:id="@+id/et_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_community"
                android:imeOptions="actionNext"
                android:text="@={viewModel.userName}"
                app:onFocusChange="@{(v, hasFocus) -> viewModel.onUserNameFocusChange(v, hasFocus)}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="@{viewModel.isPasswordErrorEnabled}"
            app:error="@{viewModel.passwordError}"
            android:hint="@string/type_password_register">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_community"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                app:onFocusChange="@{(v, hasFocus) -> viewModel.onPasswordFocusChange(v, hasFocus)}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="@{viewModel.isRePwdErrorEnabled}"
            app:error="@{viewModel.rePwdError}"
            android:hint="@string/type_repeat_password">
            <EditText
                android:id="@+id/et_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:drawableStart="@drawable/ic_community"
                android:text="@={viewModel.rePassword}"
                android:inputType="textPassword"
                app:onFocusChange="@{(v, hasFocus) -> viewModel.onRepeatPasswordFocusChange(v, hasFocus)}"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:background="@drawable/btn_login_selector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{viewModel::onClick}"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            android:text="@string/register" />

    </LinearLayout>
</layout>