<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="com.qiyao.bysj.runningisthebest.module.home.viewmodel.MyInfoItemViewModel" />
    </data>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/primary"
        android:onClick="@{viewModel::onClick}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/height"
                    style="@style/LightSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="@dimen/base_list_item_vertical_spacing"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@{viewModel.height}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/weight"
                    style="@style/LightSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="@dimen/base_list_item_vertical_spacing"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/text_size_medium"
                    android:text="@{viewModel.weight}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/bmi"
                    style="@style/LightSecondaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_marginTop="@dimen/base_list_item_vertical_spacing"
                    android:textColor="@color/md_white_1000"
                    android:textSize="@dimen/text_size_medium"
                    android:text="167cm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.signature}"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/text_size_body" />

    </LinearLayout>
</layout>