<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.qiyao.bysj.runningisthebest.module.run.viewmodel.RunTrackViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.amap.api.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:text="@{viewModel.datetime}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:background="@color/md_white_1000"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/base_list_item_vertical_margin"
            android:paddingEnd="@dimen/base_list_item_horizontal_margin"
            android:paddingStart="@dimen/base_list_item_horizontal_margin"
            android:paddingTop="@dimen/base_list_item_vertical_margin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/base_list_item_vertical_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/MyTotalNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.distance}"
                    android:textSize="32sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/base_list_item_horizontal_spacing"
                    android:text="@string/km"
                    android:textSize="@dimen/text_size_medium" />
            </LinearLayout>

            <include layout="@layout/view_divider_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/base_list_item_vertical_margin"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTotalNumberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.duration}"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_list_item_vertical_spacing"
                        android:text="@string/duration"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_body" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTotalNumberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.avgPace}"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_list_item_vertical_spacing"
                        android:text="@string/avg_pace"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_body" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTotalNumberText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.calories}"
                        android:textSize="@dimen/text_size_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_list_item_vertical_spacing"
                        android:text="@string/cal"
                        android:textColor="@color/primary_text"
                        android:textSize="@dimen/text_size_body" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>
